# OPCUAtor

./: .env.example  .gitignore  README.md  opcuator.sh  pyproject.toml  requirements.txt  run.ps1
scripts/: generate-opcua-client-cert.py  inspect-opcua-cert.py  opcuator-github-sync.sh  setup-github-sync.sh
src/opcuator/: __init__.py  config.py  connection.py  main.py  models.py  opcua_browser.py  serve.py
systemd/: opcuator-github-sync.env.example  opcuator-github-sync.service  opcuator-github-sync.timer
